# TsukiBot

./: .gitignore  CMakeLists.txt  Compile.md  HISTORY  README.md  TODO  TsukiBot.geany  compile.sh  gdb-compile.sh  main.cpp
TsukiBot/include/: TsukiIRC.hpp  constants.hpp  ircconnector.hpp  irchelpers.hpp  ircmessage.hpp
TsukiBot/src/: TsukiIRC.cpp  constants.cpp  ircconnector.cpp  irchelpers.cpp  ircmessage.cpp
cmake/modules/: TryxPSConfig.cmake  TryxPSTargets.cmake
include/: TsukiIRC.cpp  TsukiIRC.hpp  ZenIRC.cpp  constants.cpp  constants.hpp  ircconnector.cpp  ircconnector.hpp  ircmessage.cpp  ircmessage.hpp
plugins-src/: BasePlugin.cpp  BasePlugin.hpp  helperfuncs.c  helperfuncs.cpp  helperfuncs.h  helperfuncs.hpp  helperfuncs.hpp~  list.hpp  list.hpp~  tryxlist.hpp~
plugins-src/BasicPlg/: BasicPlg.cpp  BasicPlg.hpp
plugins-src/MooPlugin/: mooplg.cpp  mooplg.cpp~  mooplg.hpp  mooplg.hpp~
plugins-src/PingPlugin/: pingplg.cpp  pingplg.hpp
plugins-src/RemindPlugin/: remindplg.cpp  remindplg.hpp
plugins-src/Tsuki-PluginManager/include/: BasePlugin.hpp  config.hpp  kernel.hpp  plugin.hpp  sharedlib.hpp
plugins-src/Tsuki-PluginManager/src/: BasePlugin.cpp  kernel.cpp  plugin.cpp
src/: TsukiIRC.cpp  TsukiIRC.hpp  ZenIRC.hpp  constants.cpp  constants.hpp  ircconnector.cpp  ircmessage.cpp  ircmessage.hpp
tests/: CMakeLists.txt  Makefile  compile.sh  gdb-compile.sh  irclog.txt  ircmessage-test.cpp  msg-test.cpp  parsemsg-test.cpp  prefix-test.cpp
